--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
 body {
-  background-image:url("https://translate.google.com/?hl=en&tab=iT&authuser=0");
+  background-image:url("https://www.psdgraphics.com/wp-content/uploads/2009/07/theatre-stage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:top 100%;
+  justify-content: center;
+  color:white;
+  font-size: 20px;
+ 
 }
 
 #style{
