--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,9 @@ body {
   justify-content: center;
   color:white;
   font-size: 20px;
+  margin-left:100px;
+  margin-
+  font-family: 'Bangers';
  
 }
 
