--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,24 @@
+
 body {
   background-image:url("https://www.psdgraphics.com/wp-content/uploads/2009/07/theatre-stage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 200%;
+  background-position:top 100%;
+  justify-content: center;
   color:white;
   font-size: 20px;
-  margin-left:100px; 
-  margin-right:100px;
-  font-family:'Bangers';
+  margin-left:100px;
+  font-family: 'Bangers';
  
 }
+
 ul{
   list-style-type:none;
 }
-/* .jumbotron {
 
-
-} */
 li{
   padding-top: 8px;
   padding-bottom: 8px;
 }
+
+/* hello */
