--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,24 @@ body {
   background-size: cover;
   background-position:top 100%;
   justify-content: center;
-  color:white;
   font-size: 20px;
+  color:white;
   margin-left:100px;
+  margin-right:100px;
   font-family: 'Bangers';
  
+}
+.jumbotron h1 {
+  background-color:black;
+  text-align: center;
+  font-size: 90px;
+}
+.jumbotron{
+  background-color: black;
+}
+#reel{
+  width:200px;
+  height:200px;
 }
 
 ul{
@@ -19,6 +32,10 @@ ul{
 li{
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+.search-msg{
+  display: none;
 }
 
 /* hello */
