--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 
 body {
-  background-image:url("https://www.psdgraphics.com/wp-content/uploads/2009/07/theatre-stage.jpg");
+  background-image:url("http://2.bp.blogspot.com/-8OHNXeVlgAY/UEWeW7kAzuI/AAAAAAAADVo/83-Ck2fMx0M/s1600/Red-Curtain-Background.jpg");
+  height:1200px;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position:top 100%;
   justify-content: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
   font-size: 20px;
   color:white;
   margin-left:100px;
@@ -12,21 +15,41 @@ body {
   font-family: 'Bangers';
  
 }
-.jumbotron h1 {
+
+.jumbotron {
   background-color:black;
   text-align: center;
   font-size: 90px;
+  height:80px;
+  margin-top: 40px;
+ 
 }
-.jumbotron{
-  background-color: black;
+.head{
+  margin-top: -140px;
 }
 #reel{
-  width:200px;
-  height:200px;
+  padding-top:50px;
+  padding-left:50px;
+  width:300px;
+  height:300px;
+  transform: rotate(30deg);
 }
-
+.intro{
+  padding-top: 50px;
+  padding-right:160px;
+  text-align: center;
+  font-size: 30px;
+}
 ul{
   list-style-type:none;
+}
+.input{
+  margin-left: 100px;
+}
+#movie-title{
+  margin-left: 20px;
+  width: 100px;
+  height: 50px;
 }
 
 li{
