--- a/src/styles.css
+++ b/src/styles.css
@@ -19,8 +19,10 @@ body {
   font-size: 90px;
   width: 1000px;
   height: 30px;
+  margin:auto;
   margin-top: 40px;
-  margin-left: 100px;
+  margin-bottom:40px;
+  /* margin-left: 100px;  */
 }
 
 .head {
@@ -50,7 +52,8 @@ ul {
 }
 
 .input {
-  margin-left: 300px;
+  /* margin-left: 300px; */
+  margin: auto;
   padding-top: 40px;
   font-size: 25px;
   text-align: center;
@@ -60,7 +63,9 @@ ul {
 }
 
 .search-msg {
-  margin-left: 400px;
+  margin:auto;
+  text-align: center;
+  display: none;
 }
 
 #fMovieList {
@@ -72,6 +77,7 @@ ul {
 }
 
 #showFMovieList {
+  margin-left:200px;
   width: 200px;
 }
 
@@ -85,18 +91,19 @@ ul {
 
 .card-img-top {
   padding-top: 15%;
-  padding-left: 15%;
+  padding-left: 30%;
   height: 600px;
-  width: 600px;
+  width: 650px;
   
 }
 
 .card-img-top1 {
+  /* justify-content: center; */
   padding-top: 20px;
   background-color: black;
   margin-left: 80px;
   margin-right: 80px;
-  width:100px;
+  width:200px;
   height:220px;
 }
 .card-text{
@@ -107,6 +114,9 @@ ul {
   background-color: black;
   margin-top: 4px;
   padding: -20px;
+  width:300px;
+  height:400px;
+
 }
 .card-title{
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -127,7 +137,8 @@ h5 {
 }
 
 .title-result {
-  font-size: 30px;
+  /* text-align: center; */
+  font-size: 25px;
   color: whitesmoke;
   padding-top: 20px;
   margin-left: 100px;
